update gambar layout

--- a/index2.html
+++ b/index2.html
@@ -216,7 +216,7 @@
           </div>
         </div>
          <!-- Purple Table -->
-         <div class="col-md-4">
+         <div class="col-md-4 mb-4">
             <div class="pricing-table purple">
                <!-- Table Head -->
                <div class="pricing-label">Fixed Price</div>
@@ -241,7 +241,7 @@
             </div>
          </div>
          <!-- Turquoise Table -->
-         <div class="col-md-4">
+         <div class="col-md-4 mb-4">
             <div class="pricing-table turquoise">
                <!-- Table Head -->
                <div class="pricing-label">Fixed Price</div>
@@ -266,7 +266,7 @@
             </div>
          </div>
          <!-- Red Table -->
-         <div class="col-md-4">
+         <div class="col-md-4 mb-4">
             <div class="pricing-table red">
                <!-- Table Head -->
                <div class="pricing-label">Fixed Price</div>
@@ -293,15 +293,6 @@
       </div>
    </div>
   </div>
-
-  
-  
-
-
-  
-  
-  
-
  
 
   <footer>
