--- a/index2.html
+++ b/index2.html
@@ -275,9 +275,72 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
-          <p>Copyright © 2022 DigiMedia Co., Ltd. All Rights Reserved. 
-          <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
+
+        <div class="col-lg-4">
+          <h3 class="mb-4 mt-4">Tentang Kami</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit repellendus eius voluptates excepturi laboriosam porro omnis dicta totam nostrum non cumque tempore, a explicabo, quos ratione, commodi est soluta nemo?</p>
+        </div>
+
+        <div class="col-lg-4">
+          <h3 class="mb-4 mt-4">Pembayaran</h3>
+          <div class="pembayaran mb-4">
+           <div class="row mb-2">
+            <div class="col-md-4 col-4 col-3 mb-4">
+              <div class="card">
+                <div class="card-body text-center rounded shadow border-none">
+                  <img src="https://cherryshopcom.netlify.app/assets/BCA-6881a9a4.png" alt="" class="img-fluid" style="width:60px">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-4 col-3 mb-4">
+              <div class="card">
+                <div class="card-body text-center rounded shadow border-none">
+                  <img src="https://cherryshopcom.netlify.app/assets/BNI-15049466.png" alt="" class="img-fluid" style="width:60px">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-4 col-3 mb-4">
+              <div class="card">
+                <div class="card-body text-center rounded shadow border-none">
+                  <img src="https://cherryshopcom.netlify.app/assets/GOPAY-ead97464.png" alt="" class="img-fluid" style="width:60px">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-4 col-3 mb-4">
+              <div class="card">
+                <div class="card-body text-center rounded shadow border-none">
+                  <img src="https://cherryshopcom.netlify.app/assets/indomaret-logo-9481ac47.png" alt="" class="img-fluid" style="width:60px">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-4 col-3 mb-4">
+              <div class="card">
+                <div class="card-body text-center rounded shadow border-none">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/BANK_BRI_logo.svg/2560px-BANK_BRI_logo.svg.png" alt="" class="img-fluid" style="width:60px">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-4 col-3 mb-4">
+              <div class="card">
+                <div class="card-body text-center rounded shadow border-none">
+                  <img src="https://cherryshopcom.netlify.app/assets/atm-bersama-0f2c50e9.jpg" alt="" class="img-fluid" style="width:60px">
+                </div>
+              </div>
+            </div>
+           </div>
+          </div>
+        </div>
+
+       
+
+        <div class="col-lg-4">
+          <h3 class="mb-4 mt-4">Kontak Kami</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit repellendus eius voluptates excepturi laboriosam porro omnis dicta totam nostrum non cumque tempore, a explicabo, quos ratione, commodi est soluta nemo?</p>
         </div>
       </div>
     </div>
